# roro

./: package.json
.github/workflows/: rust.yml
.kl/: index.kl
.kl/templates/: index.temp  model.temp  modelFull.temp  models.temp  mp4index.temp  mp4service.temp  service.temp
config/: webpack.config.js
src/: index.scss  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmds.rs  main.rs  states.rs
src-tauri/src/core/: catalogue.rs  configs.rs  history.rs  mod.rs  posts.rs  profiles.rs
src-tauri/src/native/: menu.rs  mod.rs  run.rs  setup.rs  tray.rs
src-tauri/src/utils/: config.rs  dirs.rs  help.rs  init.rs  mod.rs  placeholder_text.rs  size.rs  tmpl.rs
src/components/MDEditor/: index.scss  index.tsx  toolbar-button.tsx
src/components/RoroEditor/: index.scss  index.tsx
src/components/RoroEditor/plugins/: OnValueChangePlugin.tsx  ToolbarPlugin.js
src/pages/Home/: index.scss  index.tsx
src/pages/Home/model/: index.tsx
src/pages/Home/widgets/: index.ts
src/pages/Home/widgets/LeftContent/: index.scss  index.tsx
src/pages/Home/widgets/RightContent/: index.csss  index.tsx
src/services/: cmds.ts
